<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Auto Assist</string>
    <string name="vin_label">VIN</string>
    <string name="plate_label">Vehicle Registration</string>
    <string name="capacity_label">Capacity</string>
    <string name="power_label">Power</string>
    <string name="mileage_label">Mileage</string>
    <string name="year_label">Year</string>
    <string name="description_label">Description</string>
    <string name="make_label">Make</string>
    <string name="model_label">Model</string>
    <string name="mot_label">MOT</string>
    <string name="insurance_label">Insurance</string>
    <string name="date_label">Date</string>
    <string name="cost_label">Cost</string>
    <string name="garage_label">Garage</string>
    <string name="servicesdone_label">Services done:</string>
    <string name="quantity_label">Quantity</string>
    <string name="cost_per_one_label">Cost per gallon</string>
    <string name="refuel_description_label">Additional information:</string>
    <string name="service_description_label">Additional information:</string>
    <string name="different_maintenance_label">Other:</string>
    <string name="service_view_label">Information about service</string>
    <string name="refuel_view_label">Information about refuelling</string>
    <string name="service_add_label">Adding service</string>
    <string name="refuel_add_label">Adding refuelling</string>
    <string name="insurance_description_label">Description (insurance agency)</string>
    <string name="mot_description_label">Decription</string>
    <string name="report_label">Reports</string>
    <string name="from_label">From</string>
    <string name="to_label">To</string>
    <string name="report_button_label">Generate</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="report_fuel">Fuel consumption</string>
    <string name="report_fuel_average">Average fuel consumption</string>
    <string name="report_fuel_per_day">Daily fuel consumption</string>
    <string name="report_fuel_per_month">Monthly fuel consumption</string>
    <string name="report_fuel_overall">Overall fuel consumption</string>
    <string name="report_fuel_cost_per_day">Daily fuel cost</string>
    <string name="report_fuel_cost_per_month">Monthly fuel cost</string>
    <string name="report_fuel_cost_overall">Overall fuel cost</string>
    <string name="report_services">Services</string>
    <string name="report_services_count">Services count</string>
    <string name="report_services_cost_overall">Overall services cost</string>
    <string name="report_services_cost_average">Average services cost</string>
    <string name="report_services_cost_per_month">Monthly services cost</string>
    <string name="report_summary">Summary</string>
    <string name="report_summary_cost_overall">Overall cost</string>
    <string name="report_summary_cost_per_month">Monthly cost</string>
    <string name="report_summary_mileage_overall">Mileage overall</string>
    <string name="report_summary_mileage_per_month">Monthly mileage</string>
    <string name="report_summary_to_mot">Days to MOT</string>
    <string name="report_summary_to_insurance">Days to insurance expire</string>
    <string name="report_fuel_chart">Fuel consumption chart</string>
    <string name="report_summary_chart">Overall cost chart</string>
    <string name="currency_symbol">£</string>
    <string name="quantity_symbol">gal</string>
    <string name="mileage_symbol">miles</string>
    <string name="error">Mandatory field</string>
    <string name="error_value">Wrong value</string>
    <string name="add_insurance_button_label">Add insurance</string>
    <string name="add_mot_button_label">Add MOT</string>
    <string name="car_view_tab_name">Details</string>
    <string name="refuel_tab_name">Refuellings</string>
    <string name="service_jobs_tab_name">Services</string>
    <string name="reports_tab_name">Reports</string>
    <string name="fifth_refuelling">5 refuellings added.</string>
    <string name="fifth_service">5 services added.</string>
    <string name="fiftieth_refuelling">50 refuellings added.</string>
    <string name="first_car_added">First car added.</string>
    <string name="first_refuelling">First refuelling added.</string>
    <string name="first_service">First service added.</string>
    <string name="mot_insurance_added">MOT and insurance added.</string>
    <string name="one_year_using">1 year of application using</string>
    <string name="twentieth_refuelling">20 refuellings added.</string>
    <string name="twentieth_service">20 services added.</string>
    <string name="two_years_using">1 year of application using</string>
    <string name="tenth_service">10 services done.</string>
    <string name="delete_database">Delete dababase</string>
    <string name="load_file">Load from file</string>
    <string name="memory_card">Memory card</string>
    <string name="save_file">Save to file</string>
    <string name="type_filename_plz">Enter the filename </string>
    <string name="no_data_entered">No data</string>
    <string name="end_date">End date</string>
    <string name="expired">Expired</string>
    <string name="abort">No</string>
    <string name="achievements">Achievements</string>
    <string name="car_add_label">Car add</string>
    <string name="confirm">Yes</string>
    <string name="language_label">Language</string>
    <string name="mot_add_label">Adding MOT</string>
    <string name="settings">Settings</string>
    <string name="insurance_add_label">Insurance adding</string>
    <string name="delete_confirm_message">Delete this vehicle?</string>
    <string name="wrong_date">Wrong order of dates</string>
    <string name="delete_button_label">Delete</string>
    <string name="edit_button_label">Edit</string>
    <string name="database_label">Database</string>
    <string name="reminder_time_label">Reminder time</string>
    <string name="settings_change_time">Change</string>
    <string name="settings_export">Export</string>
    <string name="settings_import">Import</string>
    <string name="dialog_please_wait">Please wait, preparing database</string>
    <string name="new_reminder_time_set">Future reminders will be delivered in this time</string>
    <string name="insurance_reminder_message">Today is end of your insurance!</string>
    <string name="mot_reminder_message">Today is end of your MOT!</string>

</resources>