<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_label"
        android:id="@+id/report_label"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:focusable="false"
        android:hint="@string/from_label"
        android:id="@+id/report_from_field"
        android:layout_below="@+id/report_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:hint="@string/to_label"
        android:id="@+id/report_to_field"
        android:layout_below="@+id/report_from_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/report_list"
        android:layout_below="@id/report_to_field"
        tools:listitem="@layout/item_service_done_jobs">

        <RadioButton
            android:id="@+id/report_radio_fuel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/report_fuel" />

        <RadioButton
            android:id="@+id/report_radio_services"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/report_services" />

        <RadioButton
            android:id="@+id/report_radio_summary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/report_summary" />

        <RadioButton
            android:id="@+id/report_radio_fuel_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/report_fuel_chart" />

        <RadioButton
            android:id="@+id/report_radio_summary_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/report_summary_chart" />

    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/report_make_button"
        android:text="@string/report_button_label"
        android:layout_below="@+id/report_list"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>