<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/language_label"
		android:textSize="22sp"/>

	<Spinner
		android:id="@+id/language_spinner"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:text="@string/reminder_time_label"
		android:textSize="22sp"/>

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/settings_current_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="20dp"
			android:textColor="@color/grey"
			tools:text="12:00"/>

		<Button
			android:id="@+id/change_time_button"
			style="@style/AppTheme.Button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/settings_change_time"/>
	</LinearLayout>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:text="@string/database_label"
		android:textSize="22sp"/>


	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:orientation="horizontal"
		android:weightSum="5">

		<Button
			android:id="@+id/export_database_button"
			style="@style/AppTheme.Button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="2"
			android:text="@string/settings_export"/>

		<View
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_weight="1"/>

		<Button
			android:id="@+id/import_database_button"
			style="@style/AppTheme.Button"
			android:layout_weight="2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:text="@string/settings_import"/>

	</LinearLayout>

	<Button
		android:id="@+id/delete_database_button"
		style="@style/AppTheme.Button"
		android:layout_marginTop="10dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/delete_database"/>
</LinearLayout>