<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_services"
        android:textAlignment="center"
        android:id="@+id/report_services_label" />

    <TextView
        android:id="@+id/report_services_count_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_services_count"
        android:layout_below="@id/report_services_label" />

    <TextView
        android:id="@+id/report_services_cost_overall_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_services_cost_overall"
        android:layout_below="@id/report_services_count_label" />

    <TextView
        android:id="@+id/report_services_cost_average_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_services_cost_average"
        android:layout_below="@id/report_services_cost_overall_label" />

    <TextView
        android:id="@+id/report_services_cost_per_month_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_services_cost_per_month"
        android:layout_below="@id/report_services_cost_average_label" />

</RelativeLayout>