<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/service_add_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/service_add_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/refuel_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_add_label"
        android:hint="@string/date_label"
        android:inputType="date" />

    <EditText
        android:id="@+id/refuel_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refuel_date"
        android:hint="@string/mileage_label"
        android:inputType="number" />

    <EditText
        android:id="@+id/refuel_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refuel_mileage"
        android:hint="@string/cost_label"
        android:inputType="number" />

    <EditText
        android:id="@+id/service_garage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/refuel_cost"
        android:hint="@string/garage_label" />

    <TextView
        android:id="@+id/service_servicesdone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/service_description"
        android:layout_centerHorizontal="true"
        android:text="@string/servicesdone_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_servicesdone"
        android:text="New CheckBox" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:text="New CheckBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox2"
        android:text="@string/different_maintenance_label" />

    <EditText
        android:id="@+id/service_different_maintenance_name"
        android:layout_width="wrap_content"

        android:layout_height="80px"
        android:layout_alignTop="@+id/checkBox3"
        android:layout_toEndOf="@+id/checkBox3"
        android:layout_toRightOf="@+id/checkBox3" />

    <EditText
        android:id="@+id/service_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/service_garage"
        android:gravity="top"
        android:hint="@string/service_description_label"
        android:inputType="textMultiLine"
        android:lines="2" />

</RelativeLayout>