<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.edu.pwr.zpi.autoasystent.view.activity.TransferActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/transfer_editText"
        android:inputType="text"
        android:hint="@string/type_filename_plz" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_file"
        android:id="@+id/transfer_button_save"
        android:layout_below="@+id/transfer_switch"
        android:onClick="saveToFile" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_file"
        android:id="@+id/transfer_button_load"
        android:layout_below="@+id/transfer_button_save"
        android:onClick="loadFromFile" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_database"
        android:id="@+id/transfer_button_delete"
        android:layout_below="@+id/transfer_button_load"
        android:onClick="deleteDatabase" />

    <Switch
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/memory_card"
        android:id="@+id/transfer_switch"
        android:layout_below="@+id/transfer_editText"
        android:checked="true" />

</RelativeLayout>
