<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/insurance_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date_label"
        android:inputType="date" />

    <EditText
        android:id="@+id/insurance_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_label" />

    <EditText
        android:id="@+id/insurance_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/insurance_description_label" />


</LinearLayout>