<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        android:id="@+id/service_date_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_label"
        android:id="@+id/service_cost_label"
        android:layout_below="@+id/service_date_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mileage_label"
        android:id="@+id/service_mileage_label"
        android:layout_below="@+id/service_cost_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garage_label"
        android:id="@+id/service_garage_label"
        android:layout_below="@+id/service_mileage_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuel_description_label"
        android:id="@+id/service_description_label"
        android:layout_below="@+id/service_garage_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="22.15.2015"
        android:id="@+id/service_date_field"

        android:layout_alignParentRight="true"
        android:gravity="right" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="120,56 zł"
        android:id="@+id/service_cost_field"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@+id/service_date_field" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="210 000 km"
        android:id="@+id/service_mileage_field"

        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@+id/service_cost_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="ADF"
        android:id="@+id/power_field"

        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@+id/service_mileage_field" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Przegląd okresowy"
        android:id="@+id/service_description_field"
        android:layout_below="@+id/service_description_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/servicesdone_label"
        android:id="@+id/service_servicesdone"
        android:layout_below="@id/service_description_field"
        android:layout_centerHorizontal="true" />

</RelativeLayout>