<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label"
        android:id="@+id/service_date_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_label"
        android:id="@+id/refuel_quantity_label"
        android:layout_below="@+id/service_date_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_label"
        android:id="@+id/refuel_cost_label"
        android:layout_below="@+id/refuel_quantity_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_per_one_label"
        android:id="@+id/refuel_cost_per_one_label"
        android:layout_below="@+id/refuel_cost_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mileage_label"
        android:id="@+id/refuel_mileage_label"
        android:layout_below="@+id/refuel_cost_per_one_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refuel_description_label"
        android:id="@+id/refuel_description_label"
        android:layout_below="@+id/refuel_mileage_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="22.15.2015"
        android:id="@+id/refuel_date_field"

        android:layout_alignParentRight="true"
        android:gravity="right"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="22 L"
        android:id="@+id/refuel_quantity_field"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@+id/refuel_date_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="120,56 zł"
        android:id="@+id/refuel_cost_field"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@+id/refuel_quantity_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="4,66 zł"
        android:id="@+id/refuel_cost_per_one_field"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@+id/refuel_cost_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="210 000 km"
        android:id="@+id/refuel_mileage_field"

        android:layout_alignParentRight="true"
        android:gravity="right"
        android:layout_below="@+id/refuel_cost_per_one_field" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Statoil przy dworcu"
        android:id="@+id/refuel_description_field"
        android:layout_below="@+id/refuel_description_label" />


</RelativeLayout>